--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,22 @@
 version: '3.8'
 services:
+  pnpm:
+    container_name: pnpm
+    build: .
+    tty: true
+    ports:
+      - "3000:3000"
+      - "8000:8000"
+    volumes:
+      - .:/app
+      - exclude_node_modules:/app/node_modules
+    depends_on:
+      - postgres
+    env_file:
+      - .env
+    networks:
+      - urlnet
+
   postgres:
     image: postgres:13
     container_name: postgres
@@ -10,7 +27,13 @@ services:
       - .env
     volumes:
       - postgres:/var/lib/postgresql/data
+    networks:
+      - urlnet
 
 volumes:
   postgres:
     name: nest-db
+  exclude_node_modules:
+
+networks:
+  urlnet:
