--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -4,14 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite --port 3000 --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "myui": "workspace:1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "myui": "workspace:*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
@@ -20,7 +20,7 @@
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "typescript": "^4.7.4",
+    "vite": "^3.0.8"
   }
 }
